Update gift description in index.html

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="gift-box" id="gift-box">
             <img src="assets/2025_12_06_03_56_IMG_1764.JPG" alt="" class="gift-img">
             <img src="assets/2025_12_06_03_57_IMG_1765.JPG" alt="" class="gift-img"> 
-            <p>haha yei ho gift maile aafai le buneko</p>
+            <p>haha yei ho gift</p>
         </div>
         <button id="unlock-btn" class="unlock-btn">
             click to see gift
